2009-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Try to be more insistent about compilation failure
	if libjpeg version is less than 6b.  IRIX compiler only warns
	about #error preprocessor statement.

2009-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetCompressionQuality): New Wand
	method to allow setting the compression quality.

2009-07-29 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/topol.c: Fixed missing break. Added response to ping.

2009-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Detect improper rows, columns, or
	depth.  Fixes CVE-2008-1097 "Memory corruption in ImageMagick's
	PCX coder".

	* configure.ac: Update to Autoconf 2.64.

2009-07-25 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/topol.c: Fixed several issues. Added possibility to read
	TopoL level 2 images.

2009-07-25 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* VisualMagick\configure\configure.cpp: Fixed library absolute path issue.

2009-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (DestroyMagickRandomGenerator): Trick to free
	thread specific random kernel contexts simply locks up with MSVC's
	OpenMP, so remove this functionality.

2009-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
	specific random kernel data.

	* magick/tsd.c (MagickTsdKeyCreate): Fix glitch when built without
	any threads support.

2009-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Update GraphicsMagick vs ImageMagick image
	processing benchmark results.

2009-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Update performance measurements for readily
	available systems.

	* NEWS.txt: Updated to reflect latest changes.

2009-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.38.
