@@ -164,29 +164,23 @@ typedef char ASCII;
 typedef magick_uint8_t U8;
 typedef magick_uint16_t U16;
 typedef magick_uint32_t U32;
-typedef float R32;
-typedef magick_uint16_t sample_t;
-
-/*
-  Union to allow R32 to be accessed as an unsigned U32 type for "unset
-  value" access.
-*/
 typedef union _R32_u
 {
-  U32   u;
-  R32   f;
-} R32_u;
+  magick_uint32_t u;
+  float f;
+} R32;
+typedef magick_uint16_t sample_t;
 
 #define SET_UNDEFINED_U8(value)  (value=0xFFU)
 #define SET_UNDEFINED_U16(value) (value=0xFFFFU)
 #define SET_UNDEFINED_U32(value) (value=0xFFFFFFFFU)
-#define SET_UNDEFINED_R32(value) (((R32_u*) &value)->u=~0U);
+#define SET_UNDEFINED_R32(value) (value.u=~0U);
 #define SET_UNDEFINED_ASCII(value) ((void) memset(value,0,sizeof(value)))
 
 #define IS_UNDEFINED_U8(value) (value == ((U8) 0xFFU))
 #define IS_UNDEFINED_U16(value) (value == ((U16) 0xFFFFU))
 #define IS_UNDEFINED_U32(value) (value == ((U32) 0xFFFFFFFFU))
-#define IS_UNDEFINED_R32(value) (((R32_u*) &value)->u == ((U32) ~0U))
+#define IS_UNDEFINED_R32(value) (value.u == ((U32) ~0U))
 #define IS_UNDEFINED_ASCII(value) (!(value[0] > 0))
 
 /*
@@ -554,7 +548,7 @@ STATIC unsigned int IsDPX(const unsigned char *magick,const size_t length)
 \
   if (!IS_UNDEFINED_R32(member)) \
     { \
-      FormatString(buffer_,"%g",member); \
+      FormatString(buffer_,"%g",member.f); \
       (void) SetImageAttribute(image,name,buffer_); \
       LogSetImageAttribute(name,buffer_); \
     } \
@@ -583,9 +577,9 @@ STATIC void SwabDPXImageInfo(DPXImageInfo *image_info)
     {
       MagickSwabUInt32(&image_info->element_info[i].data_sign);
       MagickSwabUInt32(&image_info->element_info[i].reference_low_data_code);
-      MagickSwabFloat(&image_info->element_info[i].reference_low_quantity);
+      MagickSwabFloat(&image_info->element_info[i].reference_low_quantity.f);
       MagickSwabUInt32(&image_info->element_info[i].reference_high_data_code);
-      MagickSwabFloat(&image_info->element_info[i].reference_high_quantity);
+      MagickSwabFloat(&image_info->element_info[i].reference_high_quantity.f);
       MagickSwabUInt16(&image_info->element_info[i].packing);
       MagickSwabUInt16(&image_info->element_info[i].encoding);
       MagickSwabUInt32(&image_info->element_info[i].data_offset);
@@ -597,8 +591,8 @@ STATIC void SwabDPXImageSourceInfo(DPXImageSourceInfo *source_info)
 {
   MagickSwabUInt32(&source_info->x_offset);
   MagickSwabUInt32(&source_info->y_offset);
-  MagickSwabFloat(&source_info->x_center);
-  MagickSwabFloat(&source_info->y_center);
+  MagickSwabFloat(&source_info->x_center.f);
+  MagickSwabFloat(&source_info->y_center.f);
   MagickSwabUInt32(&source_info->x_original_size);
   MagickSwabUInt32(&source_info->y_original_size);
   MagickSwabUInt16(&source_info->border_validity.XL);
@@ -607,31 +601,31 @@ STATIC void SwabDPXImageSourceInfo(DPXImageSourceInfo *source_info)
   MagickSwabUInt16(&source_info->border_validity.YB);
   MagickSwabUInt32(&source_info->aspect_ratio.horizontal);
   MagickSwabUInt32(&source_info->aspect_ratio.vertical);
-  MagickSwabFloat(&source_info->x_scanned_size);
-  MagickSwabFloat(&source_info->y_scanned_size);
+  MagickSwabFloat(&source_info->x_scanned_size.f);
+  MagickSwabFloat(&source_info->y_scanned_size.f);
 }
 STATIC void SwabDPXMPFilmInfo(DPXMPFilmInfo *mp_info)
 {
   MagickSwabUInt32(&mp_info->frame_position);
   MagickSwabUInt32(&mp_info->sequence_length);
   MagickSwabUInt32(&mp_info->held_count);
-  MagickSwabFloat(&mp_info->frame_rate);
-  MagickSwabFloat(&mp_info->shutter_angle);
+  MagickSwabFloat(&mp_info->frame_rate.f);
+  MagickSwabFloat(&mp_info->shutter_angle.f);
 }
 STATIC void SwabDPXTVInfo(DPXTVInfo *tv_info)
 {
   MagickSwabUInt32(&tv_info->time_code);
   MagickSwabUInt32(&tv_info->user_bits);
-  MagickSwabFloat(&tv_info->horizontal_sample);
-  MagickSwabFloat(&tv_info->vertical_sample);
-  MagickSwabFloat(&tv_info->temporal_sample);
-  MagickSwabFloat(&tv_info->sync_time);
-  MagickSwabFloat(&tv_info->gamma);
-  MagickSwabFloat(&tv_info->black_level);
-  MagickSwabFloat(&tv_info->black_gain);
-  MagickSwabFloat(&tv_info->breakpoint);
-  MagickSwabFloat(&tv_info->white_level);
-  MagickSwabFloat(&tv_info->integration_time);
+  MagickSwabFloat(&tv_info->horizontal_sample.f);
+  MagickSwabFloat(&tv_info->vertical_sample.f);
+  MagickSwabFloat(&tv_info->temporal_sample.f);
+  MagickSwabFloat(&tv_info->sync_time.f);
+  MagickSwabFloat(&tv_info->gamma.f);
+  MagickSwabFloat(&tv_info->black_level.f);
+  MagickSwabFloat(&tv_info->black_gain.f);
+  MagickSwabFloat(&tv_info->breakpoint.f);
+  MagickSwabFloat(&tv_info->white_level.f);
+  MagickSwabFloat(&tv_info->integration_time.f);
 }
 STATIC void SMPTEBitsToString(const U32 value, char *str)
 {
@@ -986,12 +980,12 @@ STATIC void DescribeDPXImageElement(const DPXImageElement *element_info,
                         "Element %u: reference_low_data_code=%u reference_low_quantity=%g",
                         element,
                         element_info->reference_low_data_code,
-                        element_info->reference_low_quantity);
+                        element_info->reference_low_quantity.f);
   (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                         "Element %u: reference_high_data_code=%u reference_high_quantity=%g",
                         element,
                         element_info->reference_high_data_code,
-                        element_info->reference_high_quantity);
+                        element_info->reference_high_quantity.f);
   (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                         "Element %u: descriptor=%s(%u) transfer_characteristic=%s(%u) colorimetric=%s(%u)",
                         element,
@@ -3229,9 +3223,9 @@ STATIC void WriteRowSamples(const sample_t *samples,
     *definition_value_; \
 \
   if ((definition_value_=AccessDefinition(image_info,"dpx",key+4))) \
-    member=(R32) strtod(definition_value_, (char **) NULL); \
+    member.f=strtod(definition_value_, (char **) NULL); \
   else if ((attribute_=GetImageAttribute(image,key))) \
-    member=(R32) strtod(attribute_->value, (char **) NULL); \
+    member.f=strtod(attribute_->value, (char **) NULL);	\
   else \
     SET_UNDEFINED_R32(member); \
 }
@@ -3631,8 +3625,8 @@ STATIC unsigned int WriteDPXImage(const ImageInfo *image_info,Image *image)
       dpx_image_info.element_info[0].reference_low_data_code=0;
       dpx_image_info.element_info[0].reference_high_data_code=
         MaxValueGivenBits(bits_per_sample);
-      dpx_image_info.element_info[0].reference_low_quantity=0.00F;
-      dpx_image_info.element_info[0].reference_high_quantity=2.047F;
+      dpx_image_info.element_info[0].reference_low_quantity.f=0.00F;
+      dpx_image_info.element_info[0].reference_high_quantity.f=2.047F;
     }
   else if ((transfer_characteristic == TransferCharacteristicUnspecifiedVideo) ||
            (transfer_characteristic == TransferCharacteristicSMTPE274M) ||
@@ -3677,8 +3671,8 @@ STATIC unsigned int WriteDPXImage(const ImageInfo *image_info,Image *image)
         (U32) (max_value_given_bits * (16.0/255.0) + 0.5);
       dpx_image_info.element_info[0].reference_high_data_code=       /* 235 for 8 bits */
         (U32) (max_value_given_bits * (235.0/255.0) + 0.5);
-      dpx_image_info.element_info[0].reference_low_quantity=0.00F;   /* 0mv */
-      dpx_image_info.element_info[0].reference_high_quantity=0.700F; /* 700mv */
+      dpx_image_info.element_info[0].reference_low_quantity.f=0.00F;   /* 0mv */
+      dpx_image_info.element_info[0].reference_high_quantity.f=0.700F; /* 700mv */
     }
   else if (transfer_characteristic == TransferCharacteristicLinear)
     {
