@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-08-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/{cineon.c, dpx.c, locale.c, svg.c}, magick/{attribute.c,
+        effect.c, utility.c}: Eliminate warnings reported by GCC 4.4.0.
+
+</UL>
+<p>
 2009-07-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
