@@ -1,3 +1,8 @@
+2009-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/{cineon.c, dpx.c, locale.c, svg.c}, magick/{attribute.c,
+	effect.c, utility.c}: Eliminate warnings reported by GCC 4.4.0.
+
 2009-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Try to be more insistent about compilation failure
